--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -18,6 +18,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <link href="/style.css" rel="stylesheet">
+
+    <!-- Add this in your HTML header -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
     /* Adjust table cell padding */
     .table td {
@@ -250,7 +254,9 @@
                                             <a class="dropdown-item" href="/wallet">Wallet</a>
                                             <a class="dropdown-item" href="/wishlist">Wishlist</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="/logout">Logout</a>
+                                           <!-- Logout Button in the Dropdown Menu -->
+                                           <a class="dropdown-item" href="javascript:void(0);" onclick="confirmLogout()">Logout</a>
+
                                         </div>
                                     </div>
                                 <% } else { %>
@@ -456,20 +462,18 @@
             }
         } else if (data.error === 'outOfStock') {
             Swal.fire({
-                title: 'Error!',
+                title: 'Notice!',
                 text: 'Cannot increase quantity. Only available stock left.',
-                icon: 'error',
+                icon: 'info',
                 confirmButtonText: 'OK'
             });
         } else if (data.error === 'zeroQuantity') {
             Swal.fire({
                 title: 'Notice',
-                text: 'Quantity is zero. Redirecting to shop page.',
+                text: 'Please add at least one item to proceed with your order',
                 icon: 'info',
                 confirmButtonText: 'OK'
-            }).then(() => {
-                window.location.href = '/shop';
-            });
+            })
         } else {
             Swal.fire({
                 title: 'Unexpected Error',
@@ -536,13 +540,35 @@ function removeProduct(event, productId) {
     .catch(err => {
         console.error(' removing product:', err);
         Swal.fire({
-            title: 'warning!',
-            text: ' removing product. Please try again.',
-            icon: 'warning',
+            title: 'Notice!',
+            text: 'your product removed from Cart',
+            icon: 'info',
             confirmButtonText: 'OK'
-        });
-        window.location.reload()
+        }).then(()=>{
+            window.location.reload()
+        })
     });
 }
   </script>
+
+<script>
+    function confirmLogout() {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You will be logged out of your account.",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, log me out',
+            cancelButtonText: 'Cancel'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Redirect to the logout route if confirmed
+                window.location.href = '/logout';
+            }
+        });
+    }
+</script>
+
 </html> 
