--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -8,18 +8,31 @@
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+         <!-- Favicon -->
+         <link href="img/favicon.ico" rel="icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+        <!-- Google Web Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+            rel="stylesheet">
 
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <!-- Include SweetAlert CSS and JS -->
-    <link href="style.css" rel="stylesheet">
+        <!-- Font Awesome -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+        <!-- Include SweetAlert CSS and JS -->
+        <link href="style.css" rel="stylesheet">
+
+
+
+            <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUa1z3p5omZz9PZ5u8b0n37rPS1b2xV6c0qXgQ5EmxM4XmhXS0Av3Z77muEW" crossorigin="anonymous">
+
+        <!-- Optional JavaScript (Popper and Bootstrap's JavaScript Bundle) -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-QKltYyoBovKsIo6BTbAhlpe2HbJ9X8HVbmVz4lSjgd6NfybzOk6qocGO3Z6l5g23" crossorigin="anonymous"></script>
+
+
+        <!-- Add this in your HTML header -->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
         .dropdown {
             position: relative;
@@ -283,7 +296,9 @@
                                             <a class="dropdown-item" href="/wallet">Wallet</a>
                                             <a class="dropdown-item" href="/wishlist">Wishlist</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="/logout">Logout</a>
+                                           <!-- Logout Button in the Dropdown Menu -->
+                                            <a class="dropdown-item" href="javascript:void(0);" onclick="confirmLogout()">Logout</a>
+
                                         </div>
                                     </div>
                                 <% } else { %>
@@ -299,10 +314,8 @@
     </div>
 
 
-    <!-- Main Content with Address on Left and Order/Payment on Right -->
     <div class="container mt-5">
         <div class="row">
-            <!-- Address Section (Left) -->
             <div class="col-lg-6">
                 <div class="form-group box-model">
                     <label for="addressSelect">
@@ -320,16 +333,15 @@
                         </select>
                         <%}%>
                 </div>
-
                 <a href="/checkOutAddress">
                     <div class="form-group">
                         <button class="btn btn-block btn-primary">Add New Address</button>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-6">
+                <div class="col-lg-6">
                 <!-- Order Summary -->
-                <div class="card border-secondary mb-5 box-model">
+                  <div class="card border-secondary mb-5 box-model">
                     <div class="card-header bg-secondary border-0">
                         <h4 class="font-weight-semi-bold m-0"><i class="fas fa-receipt"></i> Order Total</h4>
                     </div>
@@ -339,17 +351,18 @@
                                 <%= item.productId.productName %> (Qty: <%= item.quantity %>) 
                             </p>
                             <% }) %>
-                                <hr class="mt-0">
-                                <div class="d-flex justify-content-between mb-3 pt-1">
-                                    <h6 class="font-weight-medium">Subtotal</h6>
-                                    <h6 class="font-weight-medium"><i class="fas fa-rupee-sign"></i>
-                                        <%= cart.totalPrice.toFixed(2) %>
-                                    </h6>
+                            <hr class="mt-0">
+                            <div class="d-flex justify-content-between mb-3 pt-1">
+                                <div>
+                                    <span class="font-weight-medium">Subtotal:</span>
+                                    <span class="font-weight-medium"><i class="fas fa-rupee-sign"></i> <%= cart.totalPrice.toFixed(2) %></span>
                                 </div>
-                                <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-medium">Shipping</h6>
-                                    <h6 class="font-weight-medium"><i class="fas fa-rupee-sign"></i> 50</h6>
+                                <div>
+                                    <span class="font-weight-medium">Shipping:</span>
+                                    <span class="font-weight-medium"><i class="fas fa-rupee-sign"></i> 50</span>
                                 </div>
+                            </div>
+                            
                                 <form id="couponForm">
                                     <div class="input-group">
                                         <select class="form-control p-4" id="couponCode">
@@ -386,13 +399,13 @@
                     <div class="card-body">
                         <div class="form-group">
                             <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" name="payment" id="Razorpay"
-                                    value="Razorpay">
+                                <input type="radio" class="custom-control-input" name="payment" id="Razorpay" value="Razorpay">
                                 <label class="custom-control-label" for="Razorpay">
                                     <i class="fas fa-money-check-alt"></i> Razorpay
                                 </label>
                             </div>
                         </div>
+                        
                         <div class="form-group">
                             <div class="custom-control custom-radio">
                                 <input type="radio" class="custom-control-input" name="payment" id="COD" value="cod">
@@ -401,6 +414,15 @@
                                 </label>
                             </div>
                         </div>
+                        
+                        <div class="form-group">
+                            <div class="custom-control custom-radio">
+                                <input type="radio" class="custom-control-input" name="payment" id="wallet" value="asdfas">
+                                <label class="custom-control-label" for="wallet">
+                                    <i class="fas fa-wallet"></i> Wallet
+                                </label>
+                            </div>
+                        </div>                        
                     </div>
                 </div>
 
@@ -409,6 +431,57 @@
                     <button class="btn btn-lg btn-block btn-primary" id="placeOrderBtn">
                         <i class="fas fa-paper-plane"></i> Place Order
                     </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-secondary text-dark mt-5 pt-5">
+        <div class="row px-xl-5 pt-5">
+            <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
+                <a href="" class="text-decoration-none">
+                    <h1 class="mb-4 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border border-white px-3 mr-1">SC</span>SwitchCraft</h1>
+                </a>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i> Malappuram, kerala, India</p>
+                <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>necheyanmidlaj@gmail.com</p>
+                <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+919895832213</p>
+            </div>
+            <div class="col-lg-8 col-md-12">
+                <div class="row">
+                    <div class="col-md-4 mb-5">
+                        <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
+                        <div class="d-flex flex-column justify-content-start">
+                            <a class="text-dark mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                            <a class="text-dark mb-2" href="/shop"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
+                            <a class="text-dark mb-2" href="/shopDetails"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
+                            <a class="text-dark mb-2" href="/cart"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
+                            <a class="text-dark mb-2" href="/checkout"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-5">
+                        <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
+                        <div class="d-flex flex-column justify-content-start">
+                            <a class="text-dark mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                            <a class="text-dark mb-2" href="/shop"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
+                            <a class="text-dark mb-2" href="/detail"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
+                            <a class="text-dark mb-2" href="/cart"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
+                            <a class="text-dark mb-2" href="/checkout"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-5">
+                        <h5 class="font-weight-bold text-dark mb-4">Newsletter</h5>
+                        <form action="">
+                            <div class="form-group">
+                                <input type="text" class="form-control border-0 py-4" placeholder="Your Name"  />
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control border-0 py-4" placeholder="Your Email"/>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary btn-block border-0 py-3" type="submit">Subscribe Now</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -459,8 +532,6 @@
     }
     const couponCode = document.getElementById('couponCode').value;
     const totalPrice =  document.getElementById("totalPrice").value
-
- 
     const orderDetails = {
         selectedAddressId,
         paymentMethod,
@@ -549,6 +620,8 @@
 });
 
 
+   
+
 
     / coupon session /
     document.getElementById('applyCouponBtn').addEventListener('click', async () => {
@@ -573,7 +646,8 @@
                 swal("success",`Coupon applied! Discount: ${data.discount}, Final Price: ${data.finalPrice}`, "success");
                 document.getElementById('totalPrice').innerText = data.finalPrice.toFixed(2);  
             } else {
-                alert(data.message);
+                swal("Warning","Minimum Price required", "warning");
+                return;
             }
         } catch (error) {
             console.error('Error applying coupon:', error);
@@ -596,8 +670,82 @@ document.getElementById('removeCouponBtn').addEventListener('click', () => {
 });
 
 
+
+
+//    edit address
+  document.getElementById('editAddressButton').addEventListener('click', async function () {
+    const addressId = document.getElementById('addressSelect').value;
+
+    // Fetch address details from server
+    const response = await fetch(`/address/${addressId}`);
+    const address = await response.json();
+    document.getElementById('addressId').value = addressId;
+    document.getElementById('firstName').value = address.firstName;
+    document.getElementById('lastName').value = address.lastName;
+    document.getElementById('houseNumber').value = address.houseNumber;
+    document.getElementById('area').value = address.area;
+    document.getElementById('district').value = address.district;
+    document.getElementById('pinCode').value = address.pinCode;
+    document.getElementById('phoneNumber').value = address.phoneNumber;
+  });
+
+  
+  document.getElementById('editAddressForm').addEventListener('submit', async function (event) {
+    event.preventDefault();
+
+    const addressId = document.getElementById('addressId').value;
+    const formData = {
+      firstName: document.getElementById('firstName').value,
+      lastName: document.getElementById('lastName').value,
+      houseNumber: document.getElementById('houseNumber').value,
+      area: document.getElementById('area').value,
+      district: document.getElementById('district').value,
+      pinCode: document.getElementById('pinCode').value,
+      phoneNumber: document.getElementById('phoneNumber').value
+    };
+
+    // Send updated address data to server
+    const response = await fetch(`/address/update/${addressId}`, {
+      method: 'PUT',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify(formData)
+    });
+
+    if (response.ok) {
+      alert('Address updated successfully!');
+      window.location.reload();
+    } else {
+      alert('Failed to update address.');
+    }
+  });
+   
+
 </script>
+<script>
+    function confirmLogout() {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You will be logged out of your account.",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, log me out',
+            cancelButtonText: 'Cancel'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Redirect to the logout route if confirmed
+                window.location.href = '/logout';
+            }
+        });
+    }
+</script>
+
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+
 
 </body>
 </html>
