--- a/views/user/coupon.ejs
+++ b/views/user/coupon.ejs
@@ -17,6 +17,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
      <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
+
+     <!-- Add this in your HTML header -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
         /* Existing styles */
 
@@ -228,7 +232,9 @@
                                             <a class="dropdown-item" href="/wallet">Wallet</a>
                                             <a class="dropdown-item" href="/wishlist">Wishlist</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="/logout">Logout</a>
+                                            <!-- Logout Button in the Dropdown Menu -->
+                                           <a class="dropdown-item" href="javascript:void(0);" onclick="confirmLogout()">Logout</a>
+
                                         </div>
                                     </div>
                                 <% } else { %>
@@ -338,6 +344,27 @@
             </div>
         </div>
     </div>
+    
+
+    <script>
+        function confirmLogout() {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You will be logged out of your account.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, log me out',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Redirect to the logout route if confirmed
+                    window.location.href = '/logout';
+                }
+            });
+        }
+    </script>
     
 <%- include('../partials/user/footer') %>
 </body> 
