--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -16,6 +16,11 @@
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
       <link rel="stylesheet" href="style.css">
 
+
+
+      <!-- Add this in your  headr -->
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
       <style>
   
           .dropdown {
@@ -311,7 +316,9 @@
                                             <a class="dropdown-item" href="/wallet">Wallet</a>
                                             <a class="dropdown-item" href="/wishlist">Wishlist</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="/logout">Logout</a>
+                                          <!-- Logout Button in the Dropdown Menu -->
+                                            <a class="dropdown-item" href="javascript:void(0);" onclick="confirmLogout()">Logout</a>
+
                                         </div>
                                     </div>
                                 <% } else { %>
@@ -492,4 +499,24 @@
     <!-- Products End -->
 
 
+    <script>
+        function confirmLogout() {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You will be logged out of your account.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, log me out',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Redirect to the logout route if confirmed
+                    window.location.href = '/logout';
+                }
+            });
+        }
+    </script>
+    
 <%- include('../partials/user/footer') %>
