--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -11,6 +11,10 @@
     <script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Add this in your HTML header -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
         /* Existing styles */
 
@@ -222,7 +226,9 @@
                                             <a class="dropdown-item" href="/wallet">Wallet</a>
                                             <a class="dropdown-item" href="/wishlist">Wishlist</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="/logout">Logout</a>
+                                            <!-- Logout Button in the Dropdown Menu -->
+                                            <a class="dropdown-item" href="javascript:void(0);" onclick="confirmLogout()">Logout</a>
+
                                         </div>
                                     </div>
                                 <% } else { %>
@@ -452,8 +458,6 @@
      
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="/path/to/bootstrap.bundle.js"></script>
-    <script src="/path/to/bootstrap.bundle.js"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -611,6 +615,27 @@ $(document).ready(function() {
     }
 }   
 </script>
+
+<script>
+    function confirmLogout() {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You will be logged out of your account.",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, log me out',
+            cancelButtonText: 'Cancel'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Redirect to the logout route if confirmed
+                window.location.href = '/logout';
+            }
+        });
+    }
+</script>
+
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
