--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -19,6 +19,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
      <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
+     <!-- Add this in your HTML header -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
     <style>
         .dropdown {
@@ -205,8 +208,8 @@
     
             <!-- Desktop Search Bar - Hidden on Mobile -->
             <div class="col d-none d-lg-block">
-                <form action="" method="GET" class="input-group">
-                    <input type="text" name="searchQuery" class="form-control" placeholder="Search for products">
+                <form id="searchForm" class="input-group">
+                    <input type="text" id="searchQuery" name="searchQuery" class="form-control" placeholder="Search for products">
                     <div class="input-group-append">
                         <button class="btn btn-primary" type="submit">Search</button>
                     </div>
@@ -247,7 +250,9 @@
                                             <a class="dropdown-item" href="/wallet">Wallet</a>
                                             <a class="dropdown-item" href="/wishlist">Wishlist</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="/logout">Logout</a>
+                                            <!-- Logout Button in the Dropdown Menu -->
+                                            <a class="dropdown-item" href="javascript:void(0);" onclick="confirmLogout()">Logout</a>
+
                                         </div>
                                     </div>
                                 <% } else { %>
@@ -281,50 +286,36 @@
                         <i class="fa fa-angle-down text-dark"></i>
                     </a>
 
-                    <!-- Sidebar for Categories and Filters (Brands) -->
-                    <nav id="navbar-vertical-brands" class="collapse show" style="position: relative; width: 100%;">
-                        <% for(let i = 0; i < brand.length; i++) { %>
-                            <a href="/shop?category=<%= brand[i].name %>&type=brand" class="nav-item nav-link"><%= brand[i].name %></a>
-                        <% } %>
-                    </nav>
-
-                    <!-- Sidebar for Types -->
-                    <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical-types" role="button" aria-expanded="false" aria-controls="navbar-vertical-types" style="height: 50px; margin-top: -1px; padding: 0 30px;">
-                        <h6 class="m-0">TYPES</h6>
-                        <i class="fa fa-angle-down text-dark"></i>
-                    </a>
-
-                    <!-- Sidebar for Categories and Filters (Types) -->
-                    <nav id="navbar-vertical-types" class="collapse show" style="position: relative; width: 100%;">
-                        <% for(let i = 0; i < type.length; i++) { %>
-                            <a href="/shop?category=<%= type[i].name %>&type=type" class="nav-item nav-link"><%= type[i].name %></a>
-                        <% } %>
-                    </nav>
-                <!-- Filter by Price Section -->
-                <div class="mt-4">
-                    <div class="border-bottom mb-4 pb-4">
-                        <h5 class="font-weight-semi-bold mb-4">Filter by price</h5>
-                        <form id="priceFilterForm" method="GET" action="/shop">
-                            <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                                <input type="checkbox" class="custom-control-input" name="price" value="all" id="price-all">
-                                <label class="custom-control-label" for="price-all">All Price</label>
+                    <form id="filtersForm">
+                        <!-- Sidebar for Categories and Filters (Brands) -->
+                        <nav id="navbar-vertical-brands" class="collapse show" style="position: relative; width: 100%;">
+                            <div>
+                                <% brands.forEach((brand) => { %>
+                                    <label>
+                                        <input type="checkbox" name="brand" value="<%= brand._id %>" <% if (selectedBrandFilters.includes(brand._id.toString())) { %> checked <% } %> >
+                                        <%= brand.name %>
+                                    </label><br>
+                                <% }) %>
                             </div>
-                            <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                                <input type="checkbox" class="custom-control-input" name="price" value="5000-7000" id="price-1">
-                                <label class="custom-control-label" for="price-1">5000 - 7000</label>
+                        </nav>
+                    
+                        <!-- Sidebar for Types -->
+                        <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical-types" role="button" aria-expanded="false" aria-controls="navbar-vertical-types" style="height: 50px; margin-top: -1px; padding: 0 30px;">
+                            <h6 class="m-0">TYPES</h6>
+                            <i class="fa fa-angle-down text-dark"></i>
+                        </a>
+                    
+                        <!-- Sidebar for Categories and Filters (Types) -->
+                        <nav id="navbar-vertical-types" class="collapse show" style="position: relative; width: 100%;">
+                            <div>
+                                <% types.forEach((type) => { %>
+                                    <label>
+                                        <input type="checkbox" name="type" value="<%= type._id %>" <% if (selectedTypeFilters.includes(type._id.toString())) { %> checked <% } %>>
+                                        <%= type.name %>
+                                    </label><br>
+                                <% }) %>
                             </div>
-                            <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                                <input type="checkbox" class="custom-control-input" name="price" value="10000-12000" id="price-2">
-                                <label class="custom-control-label" for="price-2">10000 - 12000</label>
-                            </div>
-                            <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                                <input type="checkbox" class="custom-control-input" name="price" value="15000-20000" id="price-3">
-                                <label class="custom-control-label" for="price-3">15000 - 20000</label>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Filter</button>
-                        </form>
-                    </div>
-                </div>
+                        </nav>
             </div>
     
             <!-- Product List Container -->
@@ -334,8 +325,8 @@
                         <div class="d-flex align-items-center justify-content-between mb-4">
                             <div class="dropdown ml-4">
                                 <button class="btn border dropdown-toggle" type="button" id="triggerId"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: black;"> <strong>   Sort by </strong>
-                                 
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: black;">
+                                    <strong>Sort by</strong>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
                                     <a class="dropdown-item" href="#" onclick="sortProducts('priceLowToHigh')">Low - High</a> 
@@ -345,7 +336,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>                      
+                    </div>                            
                     <!-- Product Grid -->
                     <div class="row mt-2" id="product-container">
                         <% if (noProducts) { %>
@@ -442,36 +433,90 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+
+    <script>
+        // Update the URL with selected filters, sort, and pagination
+        document.getElementById('searchForm').addEventListener('submit', function(event) {
+            event.preventDefault(); 
+            const form = document.getElementById('filtersForm');
     
+            const selectedBrands = [];
+            const selectedTypes = [];
+            form.querySelectorAll('input[name="brand"]:checked').forEach(checkbox => {
+                selectedBrands.push(checkbox.value);
+            });
+            form.querySelectorAll('input[name="type"]:checked').forEach(checkbox => {
+                selectedTypes.push(checkbox.value);
+            });
+            const brand = selectedBrands.length > 0 ? selectedBrands.join(',') : '';
+            const type = selectedTypes.length > 0 ? selectedTypes.join(',') : '';
+            const searchQuery = document.getElementById('searchQuery').value;
+    
+            const url = `/shop?brand=${brand}&type=${type}&searchQuery=${searchQuery}`;
+            window.location.href = url; 
+        });
+    
+        function updateURLParams() {
+            const form = document.getElementById('filtersForm');
+            const selectedBrands = [];
+            const selectedTypes = [];
+            form.querySelectorAll('input[name="brand"]:checked').forEach(checkbox => {
+                selectedBrands.push(checkbox.value);
+            });
+            form.querySelectorAll('input[name="type"]:checked').forEach(checkbox => {
+                selectedTypes.push(checkbox.value);
+            });
+            const brand = selectedBrands.length > 0 ? selectedBrands.join(',') : '';
+            const type = selectedTypes.length > 0 ? selectedTypes.join(',') : '';
+            const searchQuery = document.getElementById('searchQuery').value;
+            const priceRange = getPriceRange(); 
+    
+            window.location.href = `/shop?brand=${brand}&type=${type}&searchQuery=${searchQuery}&priceRange=${priceRange}&page=1`;
+        }
+        function getPriceRange() {
+            const selectedRanges = [];
+            document.querySelectorAll('input[name="priceRange"]:checked').forEach(checkbox => {
+                selectedRanges.push(checkbox.value);
+            });
+            return encodeURIComponent(JSON.stringify(selectedRanges)); 
+        }                                                                                                                                                                                                                                                                                                                                                                                          
+        function sortProducts(sortBy) {
+            const urlParams = new URLSearchParams(window.location.search);
+            urlParams.set('sortBy', sortBy);
+            const brand = getQueryParam('brand') || '';
+            const type = getQueryParam('type') || '';
+            const searchQuery = getQueryParam('searchQuery') || '';
+            const priceRange = getQueryParam('priceRange') || '';
+            const page = getQueryParam('page') || 1;
+            urlParams.set('brand', brand);
+            urlParams.set('type', type);
+            urlParams.set('searchQuery', searchQuery);
+            urlParams.set('priceRange', priceRange);
+            urlParams.set('page', page);
+            window.location.href = `/shop?${urlParams.toString()}`;
+        }
+        function getQueryParam(param) {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get(param);
+        }
+    
+        function goToPage(page) {
+            const urlParams = new URLSearchParams(window.location.search);
+            urlParams.set('page', page);
+            window.location.href = `/shop?${urlParams.toString()}`;
+        }
+    
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelectorAll('input[type="checkbox"]').forEach(checkbox => {
+                checkbox.addEventListener('change', updateURLParams); 
+            });
+        });
+    </script>
+    
+
        
        <script>
-    document.getElementById('price-all').addEventListener('change', function () {
-    if (this.checked) {
-        document.querySelectorAll('input[name="price"]').forEach((el) => {
-            if (el.id !== 'price-all') {
-                el.checked = false;
-            }
-        })
-    }
-});
-document.querySelectorAll('input[name="price"]').forEach((checkbox) => {
-    checkbox.addEventListener('change', function () {
-        if (this.id !== 'price-all' && this.checked) {
-            document.getElementById('price-all').checked = false;
-        }
-    });
-});
-function sortProducts(sortBy) {
-    const searchQuery = document.querySelector('input[name="searchQuery"]').value;
-    const url = new URL(window.location);
-    url.searchParams.set('sortBy', sortBy);
-    if (searchQuery) {
-        url.searchParams.set('searchQuery', searchQuery);
-    }
-    window.location.href = url.toString();
-}
- 
-
 
     function addToWishlist(productId) {
         fetch('/wishlist/add', {
@@ -492,6 +537,29 @@ function sortProducts(sortBy) {
         .catch(error => console.error('Error:', error));
     }
 </script>
+
+
+<!-- logout conformation -->
+<script>
+    function confirmLogout() {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You will be logged out of your account.",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, log me out',
+            cancelButtonText: 'Cancel'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Redirect to the logout route if confirmed
+                window.location.href = '/logout';
+            }
+        });
+    }
+</script>
+
 
 
     <%- include('../partials/user/footer') %>       
